Fixed margins in dark mode

--- a/dark.css
+++ b/dark.css
@@ -23,6 +23,16 @@ big, b{
 	padding: 20px;
 	background-color: rgb(49, 54, 63) !important;
 }
+#topbox{
+	width: 400px;
+	margin: 0 auto;
+	border: 2px solid rgb(24, 26, 31);
+	border-radius: 5px;
+	text-align: center;
+	padding: 20px;
+	background-color: rgb(49, 54, 63) !important;
+	margin-top: 60px;
+}
 hr{
 	margin: 20px;
 	background-color: #eaeaea;
